margins on pages fixed, to match. Footer extended when page too short. Cleaned up styles2.css

--- a/static/css/styles2.css
+++ b/static/css/styles2.css
@@ -1,9 +1,3 @@
-:root {
-
-    --card1: 1,1,1;
-
-}
-
 /*Subsection styling for cards*/
 
 .bg-image {
@@ -39,50 +33,6 @@
     border: 20px solid transparent;
 }
 
-#card1.bg-image .mask {
-    background-color: rgba(10, 150, 70, 0.175);
-}
-#card1.bg-image .mask:hover {
-    background-color: rgba(10, 150, 70, 0.10);
-}
-
-#card2.bg-image .mask {
-    background-color: rgba(10, 150, 70, 0.175);
-}
-#card2.bg-image .mask:hover {
-    background-color: rgba(10, 150, 70, 0.10);
-}
-
-#card3.bg-image .mask {
-    background-color: rgba(10, 150, 70, 0.175);
-}
-#card3.bg-image .mask:hover {
-    background-color: rgba(10, 150, 70, 0.10);
-}
-
-#card4.bg-image .mask {
-    background-color: rgba(10, 150, 70, 0.175);
-}
-#card4.bg-image .mask:hover {
-    background-color: rgba(10, 150, 70, 0.10);
-}
-
-#card5.bg-image .mask {
-    background-color: rgba(10, 150, 70, 0.175);
-}
-#card5.bg-image .mask:hover {
-    background-color: rgba(10, 150, 70, 0.10);
-}
-
-#card6.bg-image .mask {
-    background-color: rgba(10, 150, 70, 0.175);
-}
-#card6.bg-image .mask:hover {
-    background-color: rgba(10, 150, 70, 0.10);
-}
-
-
-
 
 .bg-image .mask .text{
     font-size: 1.8rem;
@@ -97,8 +47,6 @@
 .bg-image .mask .text p{
     margin:0;
 }
-
-
 
 
 .bg-image .mask .text p{
